; ModuleID = '/home/carl/AnghaBench/lab/engine/code/cgame/extr_cg_newdraw.c_CG_EventHandling.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/cgame/extr_cg_newdraw.c_CG_EventHandling.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@cgs = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@CGAME_EVENT_NONE = common dso_local global i32 0, align 4
@CGAME_EVENT_TEAMMENU = common dso_local global i32 0, align 4
@CGAME_EVENT_SCOREBOARD = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @CG_EventHandling(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  store i32 %3, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @cgs, i32 0, i32 0), align 4
  %4 = load i32, i32* %2, align 4
  %5 = load i32, i32* @CGAME_EVENT_NONE, align 4
  %6 = icmp eq i32 %4, %5
  br i1 %6, label %7, label %9

7:                                                ; preds = %1
  %8 = call i32 (...) @CG_HideTeamMenu()
  br label %21

9:                                                ; preds = %1
  %10 = load i32, i32* %2, align 4
  %11 = load i32, i32* @CGAME_EVENT_TEAMMENU, align 4
  %12 = icmp eq i32 %10, %11
  br i1 %12, label %13, label %14

13:                                               ; preds = %9
  br label %20

14:                                               ; preds = %9
  %15 = load i32, i32* %2, align 4
  %16 = load i32, i32* @CGAME_EVENT_SCOREBOARD, align 4
  %17 = icmp eq i32 %15, %16
  br i1 %17, label %18, label %19

18:                                               ; preds = %14
  br label %19

19:                                               ; preds = %18, %14
  br label %20

20:                                               ; preds = %19, %13
  br label %21

21:                                               ; preds = %20, %7
  ret void
}

declare dso_local i32 @CG_HideTeamMenu(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
